<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
<com.google.android.material.card.MaterialCardView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/card_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/card_margin">

            <!-- Title, secondary and supporting text -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standart_padding"
                android:text="@string/card_title_info"
                android:id="@+id/card_title_info"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textColor="@color/colorPrimaryDark"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standart_padding"
                android:layout_toRightOf="@+id/card_title_info"
                android:text="@string/card_title"
                android:id="@+id/card_title"
                android:textAppearance="?attr/textAppearanceHeadline6"
                />
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_below="@+id/card_title"
                android:layout_margin="@dimen/standart_padding"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/card_margin"
                android:text="@string/card_secondary_text_info"
                android:id="@+id/card_secondary_text_info"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textColor="@color/colorPrimaryDark"
                />
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_below="@+id/card_title"
                android:layout_margin="@dimen/standart_padding"
                android:layout_toRightOf="@+id/card_secondary_text_info"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/card_margin"
                android:text="@string/card_secondary_text"
                android:id="@+id/card_secondary_text"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textColor="@android:color/black"
                />
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_below="@+id/card_secondary_text"
                android:layout_margin="@dimen/standart_padding"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/card_margin"
                android:text="@string/card_supporting_text_info"
                android:id="@+id/card_supporting_text_info"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="@color/colorPrimaryDark"
                />
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_margin="@dimen/standart_padding"
                android:layout_below="@+id/card_secondary_text"
                android:layout_toRightOf="@+id/card_supporting_text_info"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/card_margin"
                android:text="@string/card_supporting_text"
                android:id="@+id/card_supporting_text"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="@android:color/black"
                />

        </RelativeLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
</layout>